--- a/src/styles/variables/variables.scss
+++ b/src/styles/variables/variables.scss
@@ -41,24 +41,4 @@ $banner-height: 120vh;
 	--typography-big-text-weight: 500;
 	--typography-general-text-size: 16px;
 	--typography-general-text-weight: 400;
-
-	/* old - for remove! */
-	--section-title-first-child-size: 50px;
-	--section-title-first-child-weight: 500;
-	--section-tablet-title-first-child-size: 40px;
-	--section-tablet-title-first-child-weight: 500;
-	--section-mobile-title-first-child-size: 30px;
-	--section-mobile-title-first-child-weight: 500;
-	--section-title-second-child-size: 40px;
-	--section-title-second-child-weight: 400;
-	--section-tablet-title-second-child-size: 30px;
-	--section-tablet-title-second-child-weight: 400;
-	--section-mobile-title-second-child-size: 20px;
-	--section-mobile-title-second-child-weight: 400;
-	--standart-font-size: 18px;
-	--standart-font-weight: 400;
-	--text-font-size: 18px;
-	--text-font-weight: 400;
-	--subtext-font-size: 16px;
-	--subtext-font-weight: 400;
 }
